--- a/index.qmd
+++ b/index.qmd
@@ -35,7 +35,7 @@ abstract: |
   Background: Alcohol Use Disorder (AUD) is a chronic, relapsing disease. An automated recovery support system using personal sensing and machine learning may help identify when individuals are at elevated lapse risk. Cellular communication sensing may detect dynamic changes in lapse risk and can be contextualized with self-reported, risk-relevant information about contacts.
   Objective: We evaluated a machine learning model predicting next-day alcohol lapse among individuals in early recovery from AUD using contextualized cellular communication data and baseline demographic and AUD characteristics.
   Methods: A total of 144 participants (49% male; mean age=40; 87% non-Hispanic White) with a goal of abstinence provided cellular communication data and alcohol use reports via a 4x daily EMA for up to three months. Models were trained and evaluated using repeated k-fold cross-validation.
-  Results: The best-performing model used an elastic net algorithm and retained 13 features (median posterior auROC = 0.68, 95% Bayesian credible interval (CI; [0.64, 0.71]). A baseline comparison model including only demographic and self-report measures retained five features and demonstrated nearly identical performance (median auROC = 0.68, 95% CI [0.64, 0.71]).
+  Results: The best-performing model used an elastic net algorithm and retained 13 features (median posterior auROC=0.68, 95% Bayesian credible interval (CI; [0.64, 0.71]). A baseline comparison model including only baseline features retained five features and demonstrated nearly identical performance (median auROC=0.68, 95% CI [0.64, 0.71]).
   Conclusions: Cellular communication data capture some risk-relevant signal for alcohol lapse but do not provide incremental predictive value beyond baseline measures. Several communication features were retained in the final model with moderately sized coefficients, suggesting that aspects of social communication may be important for understanding lapse risk. Although, limitations inherent to cellular communication as a sensing method may outweigh their added value. 
 
 #plain-language-summary: |
@@ -98,14 +98,13 @@ In this study, we assessed whether contextualized cellular communication feature
 # Methods
 
 ## Participants and Procedure
-We recruited adults in early recovery from AUD in Madison, Wisconsin, through print and digital advertisements and partnerships with treatment centers. Eligibility criteria required that participants were age 18 or older, able to read and write in English, had moderate to severe AUD ^[(≥4 self-reported DSM-5 symptoms)], had a goal of abstinence from alcohol, had been abstinent for 1–8 weeks, were willing to use a single smartphone, and were not exhibiting severe psychosis or paranoia.^[Defined as scores >2.2 or 2.8, respectively, on the psychosis or paranoia scales of the Symptom Checklist–90 [@derogatislBriefSymptomInventory].]
+We recruited adults in early recovery from AUD in Madison, Wisconsin, through print and digital advertisements and partnerships with treatment centers. Eligibility criteria required that participants were age 18 or older, able to read and write in English, had moderate to severe AUD ^[(≥4 self-reported DSM-5 symptoms)], had a goal of abstinence from alcohol at the time of the screening visit, had been abstinent for 1–8 weeks, were willing to use a single smartphone, and were not exhibiting severe psychosis or paranoia.^[Defined as scores >2.2 or 2.8, respectively, on the psychosis or paranoia scales of the Symptom Checklist–90 [@derogatislBriefSymptomInventory].]
 
-Participants completed up to 5 study visits over approximately 3 months: a screening visit, intake visit, and 3 monthly follow-up visits. At screening we collected demographic information (age, sex at birth, race, ethnicity, education, marital status, employment, and income) and clinical characteristics (DSM-5 AUD symptom count, alcohol problems [@hurlbutAssessingAlcoholProblems1992], and presence of psychological symptoms [@derogatislBriefSymptomInventory]). At intake we collected additional self-report data on abstinence self-efficacy [@mckiernanDevelopmentBriefAbstinence2011], craving [@flanneryPsychometricPropertiesPenn1999], and recent recovery efforts. 
+Participants completed up to 5 study visits over approximately 3 months: a screening visit, intake visit, and 3 monthly follow-up visits. At screening we determined eligibility and collected demographic information (age, sex at birth, race, ethnicity, education, marital status, employment, and income) and clinical characteristics (DSM-5 AUD symptom count, alcohol problems [@hurlbutAssessingAlcoholProblems1992], and presence of psychological symptoms [@derogatislBriefSymptomInventory]). At the intake visit, roughly two weeks after screening, we collected additional self-report data on abstinence self-efficacy [@mckiernanDevelopmentBriefAbstinence2011], craving [@flanneryPsychometricPropertiesPenn1999], and recent recovery efforts and goals.
 
 At each monthly follow-up, we downloaded backups of participants' cellular communication metadata directly from their smartphones. Metadata included the phone number of the other party, the date and time of the communication, the origin of call or message (i.e., incoming or outgoing), whether the call was answered (voice calls only), and the duration of the call (voice calls only). During each follow-up visit, study staff identified important contacts. Contacts that participants communicated with at least twice by call or text in the past month were deemed important. For each important contact, participants answered 7 contextual questions about their type of relationship, whether they ever drank alcohol with this person, the drinking status of the contact, expectations about whether the contact would drink in their presence, recovery status of contact, level of supportiveness of contact, and affective experiences with the contact. 
 
 While enrolled, participants completed 4 brief daily ecological momentary assessments (7-10 questions). The first item assessed alcohol use (date and time of any unreported drinking episodes). The remaining EMA questions were used as features in other studies [@wyantMachineLearningModels2024; @wyantForecastingRiskAlcoholunderreview], but were outside the scope of this cellular communication sensing study. Additional sensing data streams and self-report measures were collected for the parent grant. The full study protocol is available on our Open Science Framework page ([https://osf.io/wgpz9/](https://osf.io/wgpz9/)). 
-
 
 ## Data Analysis Plan
 
@@ -118,23 +117,24 @@ We filtered the raw comunication data to include only communications with known 
 
 Within each feature scoring epoch, we calculated two types of features: raw and difference features. Raw features represent the feature value calculated within a given feature scoring epoch. For example, the raw rate of incoming text messages in a 48-hour feature scoring epoch was calculated as the total number of incoming text messages in the 48 hours immediately preceding the start of the prediction window, divided by 48. Difference features capture participant-level changes from baseline. Specifically, for each feature we subtracted the participant’s mean value (using all available data prior to the prediction window) from the associated raw feature value. For example, the difference feature for incoming text messages was calculated as the raw incoming text message rate minus the participant’s average incoming text message rate across all time on study.
 
-The full model included 406 features from cellular communication data plus 24 numeric or dummy-coded features from baseline self-report measures. We also evaluated a comparison model that used only the baseline features. @tbl-1 details the raw predictors, feature engineering procedures, and features included in the full vs. baseline models. Other feature engineering steps performed during cross-validation included imputing missing values (median imputation for numeric features and mode imputation for nominal features), standardizing all features, and removing zero and near-zero variance features as determined from held-in data. 
+The full model included 406 features from cellular communication data plus 24 numeric or dummy-coded features from baseline self-report measures collected at screening and intake visits. We also evaluated a comparison model that used only the baseline features. @tbl-1 details the raw predictors, feature engineering procedures, and features included in the full vs. baseline models. Other feature engineering steps performed during cross-validation included imputing missing values (median imputation for numeric features and mode imputation for nominal features), standardizing all features, and removing zero and near-zero variance features as determined from held-in data. 
+
+{{< embed notebooks/mak_tables.qmd#tbl-1 >}} 
+
 
 ### Model Selection and Evaluation
-Candidate model configurations differed by algorithm (elastic net, random forest, XGBoost), outcome resampling method (i.e., up-sampling and down-sampling of the outcome at ratios ranging from 5:1 to 1:1), and hyperparameter values. The best configuration for each model was selected using 6 repeats of participant-grouped 5-fold cross-validation. Our performance metric was area under the receiver operating curve (auROC). Folds were stratified so that all folds contained comparable proportions of individuals who lapsed frequently (i.e., 10+ times).
+Candidate model configurations differed by algorithm (elastic net, random forest, XGBoost), outcome resampling method (i.e., up-sampling and down-sampling of the outcome at ratios ranging from 5:1 to 1:1), and hyperparameter values. The best configuration for each model was selected using 6 repeats of 5-fold cross-validation. Participants were grouped so that all of their data were always in the held-in or held-out fold for a split, but never in both. Our performance metric was area under the receiver operating curve (auROC). Folds were stratified so that all folds contained comparable proportions of individuals who lapsed frequently (i.e., 10+ times).
 
 We evaluated model performance with a Bayesian hierarchical generalized linear model. Posterior distributions with 95% credible intervals (CI) were estimated from the 30 held-out folds using weakly informative, data-dependent priors to regularize and reduce overfitting.^[Residual SD ~ normal(0, exp(2)); intercept (centered predictors) ~ normal(2.3, 1.3); window-width contrasts ~ normal(0, 2.69); covariance ~ decov(1,1,1,1).] Random intercepts were included for repeat and fold (nested within repeat). auROCs were logit-transformed and regressed on model type to estimate the probability that model performances differed systematically. 
 
-Our best performing models used an elastic net algorithm. We quantified feature importance by examining the retained features (i.e., coefficient value > 0) in the full model and ordering them by absolute coefficient value. These values provide an estimate of the direction and magnitude of association between each predictor and the outcome, conditional on the other features retained. All our annotated analysis scripts are publicly available on our study website ([https://jjcurtin.github.io/study_messages/](https://jjcurtin.github.io/study_messages/)).
-
-{{< embed notebooks/mak_tables.qmd#tbl-1 >}} 
+The best performing model used an elastic net algorithm. This model was refit on the entire data set to identify the most important features. We quantified feature importance by examining the retained features (i.e., coefficient value > 0) in the full model and ordering them by absolute coefficient value. These values provide an estimate of the direction and magnitude of association between each predictor and the outcome, conditional on the other features retained. All our annotated analysis scripts are publicly available on our study website ([https://jjcurtin.github.io/study_messages/](https://jjcurtin.github.io/study_messages/)).
 
 
 
 # Results
 
 ## Participants
-We screened 192 participants. Of these, 169 enrolled and 154 completed the first follow-up visit. Data from 1 participant was excluded due to not reporting a goal of abstinence and lapsing multiple times a day every day on study. Data from 1 participant was excluded due to evidence of careless responding. Data from 1 participant was excluded due to poor compliance with EMA resulting in questionable lapse labels. Data from 7 participants were excluded due to poor compliance providing communication data (i.e., deleting logs prior to download and/or not providing context information about important contacts). The final analytic sample included 144 participants. @tbl-2 provides the demographic characterization of our sample. 56% of participants reported at least one lapse while on study. 
+We screened 192 participants. Of these, 169 enrolled during the intake visit and 154 completed the first follow-up visit. Data from 1 participant was excluded due to drinking multiple times a day every day on study, suggesting they did not have a goal of abstinence. Data from 1 participant was excluded due to evidence of careless responding. Data from 1 participant was excluded due to poor compliance with EMA resulting in questionable lapse labels. Data from 7 participants were excluded due to poor compliance providing communication data (i.e., deleting logs prior to download and/or not providing context information about important contacts). The final analytic sample included 144 participants. @tbl-2 provides the demographic characterization of our sample. 56% of participants reported at least one lapse while on study. 
 
 {{< embed notebooks/mak_tables.qmd#tbl-2 >}} 
 
@@ -145,8 +145,6 @@ Participants had an average of 26 important contacts (range 2-113) that were con
 The median posterior auROC for the full model was `r round(subset(pp_perf, model == "full model")$pp_median, 2)`, with relatively narrow 95% CI ([`r round(subset(pp_perf, model == "full model")$pp_lower, 2)`, `r round(subset(pp_perf, model == "full model")$pp_upper, 2)`]) that did not contain .5. This provides strong evidence that the model is capturing signal in the data. The final model retained 13 features (@fig-1). The top four were baseline measures of abstinence confidence, having a goal of abstinence, abstinence self-efficacy when experiencing negative affect, and craving. Communication frequency with people unaware of the individual's recovery goals also emerged as an important feature associated with increased lapse risk.
 
 We evaluated a comparison model to assess the incremental predictive value of cellular communication features beyond baseline measures. The baseline model retained 5 features and achieved performance nearly identical to the full model (median auROC = `r round(subset(pp_perf, model == "baseline model")$pp_median, 2)`, 95% CI [`r round(subset(pp_perf, model == "baseline model")$pp_lower, 2)`, `r round(subset(pp_perf, model == "baseline model")$pp_upper, 2)`]). The median difference in auROC between the full and baseline models was less than .01, providing no evidence (52% probability) that the full model performed better than the baseline model.
-<!--I think this is the probasbilityh that the full model performed better than the baseline model.  Bit surprised that its even .52 given how close they auROCs are. Are you sure about that?-->
-<!--KW: yes you are right I updated the wording. As far as probability being .52 this is accurate. .50 would mean its essentially a coin flip for which model performs better (i.e., they pretty much perform the same) so .52 seems expected to me.  If probability was 0 that would actually mean the baseline model was performing better than the full model-->
 
 <!-- 
 Retained communication features:
